<resources>
    <string name="app_name">FunAmp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_song_play_message"> is playing!</string>
    <string name="success_song_stop_message"> Media Player is stopped!</string>
    <string name="failure_song_message"> Media Player is having issues right now!</string>
    <string name="no_music_found">You have no songs available! </string>
    <string name="no_music_add"> Download songs into your phone! </string>
    <string name="key_curr_song">current song</string>
    <string name="music_fragment_title">Songs</string>
    <string name="lyric_fragment_title">Lyrics</string>
    <string name="lyric_no_selection">Play a song to fetch the lyrics!!</string>
    <string name="lyric_not_found">Lyrics not found! Please enter artist name and song name as accurately as possible to fetch lyrics!!</string>
    <string name="lyric_enter_artist_name">Enter artist name</string>
    <string name="lyric_enter_song_name">Enter song name</string>
    <string name="lyric_search">Get Lyrics</string>
</resources>
